<resources>
    <string name="app_name">Edutree</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_drawer_ana">Analysis</string>
    <string name="menu_drawer_syll">CBSE Syllabus</string>
    <string name="menu_drawer_sp">Sample Papers</string>
    <string name="menu_drawer_tt">Take Tests</string>
    <string name="menu_drawer_note">Revision Notes</string>
    <string name="menu_drawer_myn">My Notes</string>
    <string name="menu_drawer_myb">My Bookshelf</string>
    <string name="menu_drawer_quiz">Quiz It!</string>
    <string name="menu_drawer_res">CBSE Result</string>
    <string name="menu_drawer_exp">Explore</string>
    <string name="menu_drawer_cexa">Competitive Exams</string>
    <string name="menu_drawer_set">Settings</string>
    <string name="menu_drawer_in">Share</string>
    <string name="menu_drawer_feed">Feedback</string>
    <string name="menu_drawer_abt">About Us</string>
    <string name="menu_abt">About</string>
    <string name="menu_lo">Log Out</string>
    <string name="help">Help</string>
    <string name="menu_cg">Change Grade</string>
    <string name="menu_noti">Blog</string>
    <string name="book_maths_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Mathematics.pdf?alt=media&token=695dbc6c-4f93-4157-950e-2e7641f7dd59]]></string>
    <string name="book_phy_11_p1"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Physics-Part-1.pdf?alt=media&token=3b95de9c-00a3-4c43-bb9f-9d0b0121824f]]></string>
    <string name="book_phy_11_p2"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Physics-Part-2.pdf?alt=media&token=08f37837-8e84-48d6-b5f7-887de7abf739]]></string>
    <string name="book_chem_11_p1"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Chemistry-Part-1.pdf?alt=media&token=50309697-d7b0-4cc1-9a0a-454c88be06c2]]></string>
    <string name="book_chem_11_p2"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Chemistry-Part-2.pdf?alt=media&token=ac39742d-d365-4720-b97a-db7f372a6b9b]]></string>
    <string name="book_bio_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Biology.pdf?alt=media&token=2cdc84b4-880b-4a78-bac5-03d0da9fd1f0]]></string>
    <string name="book_acc_11_p1"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Accountancy-Part-1.pdf?alt=media&token=0802fc9e-ef81-4011-bd62-85d10ab4e197]]></string>
    <string name="book_acc_11_p2"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Accountancy-Part-2.pdf?alt=media&token=c42edb99-9c8f-4661-bd68-ef42f17989d3]]></string>
    <string name="book_bst_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Business-Studies.pdf?alt=media&token=a5504c05-8a5e-4e95-821d-effc1a793df1]]></string>
    <string name="book_eco_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Economics.pdf?alt=media&token=53b58978-d200-4281-a4d9-a9c235b0323a]]></string>
    <string name="book_geo_11_p1"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Geography-Part-1.pdf?alt=media&token=c939e15b-8df6-48f0-8720-ca7d872fb015]]></string>
    <string name="book_geo_11_p2"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Geography-Part-2.pdf?alt=media&token=a2c793a5-05cd-49ab-8d88-1f1ebca5196f]]></string>
    <string name="book_ps_11_p1"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Political-Science-Part-1.pdf?alt=media&token=a68eeaa6-be27-49e8-9050-2f529b524d7f]]></string>
    <string name="book_ps_11_p2"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little-giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Political-Science-Part-2.pdf?alt=media&token=1bb06fb8-bc0d-4a35-bec1-dd20b5c22003]]></string>
    <string name="book_soc_11_p1"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Sociology-Part-1.pdf?alt=media&token=ac8f298d-412a-4ff9-a741-543e338ee314]]></string>
    <string name="book_soc_11_p2"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Sociology-Part-2.pdf?alt=media&token=2493fee0-5ccc-4a75-b998-4faea699660d]]></string>
    <string name="book_psyc_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Psychology.pdf?alt=media&token=31c7acbf-dcc1-4b0f-a87d-eeabd8514e59]]></string>
    <string name="book_stat_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-Statistics.pdf?alt=media&token=08a62432-6704-4519-b3c1-5302ebeefb5d]]></string>
    <string name="book_eng_11_p1"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-English-Part-1.pdf?alt=media&token=0caf5d68-5b71-465b-8b4e-e0b171cabb3f]]></string>
    <string name="book_eng_11_p2"></string>
    <string name="book_eng_11_p3"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FNCERT%20Ebooks%20-%2011%2FNCERT-Class-11-English-Part-3.pdf?alt=media&token=c10b6e9c-7c13-4d15-a184-0dc90f79f93e]]></string>
    <string name="notes_maths_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FCBSE%20Revision%20Notes%2FSESSION%202017-18%20CLASS%20XI%20MATHEMATICS%20-%20STUDY%20MATERIAL.pdf?alt=media&token=65d63251-bff6-4acf-b882-54ade523c282]]></string>
    <string name="notes_phy_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FCBSE%20Revision%20Notes%2FSESSION%202017-18%20%20CLASS%20XI%20PHYSICS%20STUDY%20MATERIAL.pdf?alt=media&token=bcac9453-86a5-48e5-93c2-ba4768df4bb5]]></string>
    <string name="notes_che_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FCBSE%20Revision%20Notes%2FSESSION%202017-18%20CLASS%20XI%20CHEMISTRY%20STUDY%20MATERIAL.pdf?alt=media&token=5508d079-3c53-4238-9e2a-d4f17c15a003]]></string>
    <string name="notes_english_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FCBSE%20Revision%20Notes%2FSESSION%202017-18%20CLASS%20XI%20ENGLISH%20-%20STUDY%20MATERIAL.pdf?alt=media&token=79696aed-b8cd-4ef9-acd6-666d5dda9375]]></string>
    <string name="notes_pe_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FCBSE%20Revision%20Notes%2FSESSION%202017-18%20CLASS%20XI%20PHYSICAL%20EDUCATION%20-%20STUDY%20MATERIAL.pdf?alt=media&token=3ced13aa-e4f1-42fb-a1c6-4e9b7f6aaae4]]></string>
    <string name="notes_ip_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FCBSE%20Revision%20Notes%2FSESSION%202017-18%20CLASS%20XI%20INFORMATICS%20PRACTICES%20-%20STUDY%20MATERIAL.pdf?alt=media&token=6aee03fa-0d46-469a-8589-ccfe6ea6aa98]]></string>
    <string name="notes_acc_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FCBSE%20Revision%20Notes%2FCBSE%20Revision%20Notes%20Class-11%20Accountancy.pdf?alt=media&token=fc60643b-0374-40e2-a39e-9826bf396ab5]]></string>
    <string name="notes_bst_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FCBSE%20Revision%20Notes%2FCBSE%20Revision%20Notes%20Class-11%20BST.pdf?alt=media&token=d8747afc-199e-4c92-a7d6-17ff303b6f73]]></string>
    <string name="notes_eco_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FCBSE%20Revision%20Notes%2FCBSE%20Revision%20Notes%20Class-11%20Economics.pdf?alt=media&token=060be42b-b860-41e4-b4ad-112d3478abeb]]></string>
    <string name="notes_bio_11"><![CDATA[https://firebasestorage.googleapis.com/v0/b/little–giants-edutree.appspot.com/o/Central%20Board%20of%20Secondary%20Education%20-%2011%2FCBSE%20Revision%20Notes%2FSESSION%202017-18%20CLASS%20XI%20BIOLOGY%20STUDY%20MATERIAL.pdf?alt=media&token=5f4116ae-4474-44bc-aaa4-f58ae8850d64]]></string>
    <string name="edumail">edutree.com</string>
    <string name="title_activity_ebooks">My Bookshelf</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Class 9</item>
        <item>Class 10</item>
        <item>Class 11</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
</resources>